--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/endDevice.svg" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>SimRede</title>
+    <title>NVICO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
